--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=liquibase
 
 # Configuración de la base de datos PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://bd-sah-nube.postgres.database.azure.com:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=123456789
+spring.datasource.password=16042004Bb#$
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuración del dialecto para JPA (Hibernate)
